# mongo-examples

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md
.playwright-mcp/: page-2026-06-27T05-37-01-302Z.yml  page-2026-06-27T05-37-08-484Z.yml  page-2026-06-27T05-37-32-208Z.yml  page-2026-06-27T05-37-37-530Z.yml  page-2026-06-27T05-37-41-752Z.yml  page-2026-06-29T01-10-03-499Z.yml  page-2026-06-29T01-37-48-372Z.yml  page-2026-06-29T01-59-39-010Z.yml  page-2026-06-29T01-59-56-287Z.yml  page-2026-06-29T02-00-04-549Z.yml  page-2026-06-29T02-00-10-331Z.yml  page-2026-06-29T02-36-23-250Z.yml  page-2026-06-29T02-36-27-699Z.yml
ASPvectorize/: airbnb_asp.py  sample_ugly.json
MongoMCP/: .dockerignore  .env.example  .gitignore  AWS_settings.py  Dockerfile  Dockerfile.base  Makefile  README.md  docker-compose.yml  (+4 more)
MongoMCP/mongomcp/: README.md  __init__.py  bedrock_client.py  grove_anthropic_client.py  llm_client_base.py  llm_factory.py  model_pricing.py  mongo_cache.py  mongo_mcp_middleware.py  mongo_token_verifier.py  mongodb_client.py  mongodb_query_provider.py  openai_client.py  pyproject.toml  test_model_pricing.py
MongoMCP/mongomcp/agent/: __init__.py  agent_tools.json  cache_utils.py  cached_query_processor.py  mcp_tools.py  pattern_cache.py  prompt_agent.py  tool_router.py  webui_bedrock_client.py  webui_grove_client.py
MongoMCP/mongomcp/datasets/: __init__.py  constants.py  discovery.py  service.py
MongoMCP/mongomcp/memory/: __init__.py  memservice.py  mongo_helpers.py  scope.py  tools.py
MongoMCP/mongomcp/tools/: __init__.py  handlers.py
(+139 files in other folders)
