[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MongoMCP"
version = "1.0.0"
description = "MongoDB MCP package with middleware, search tools, and AWS Bedrock integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "fastmcp>=2.14",
    "mcp>=1.25",
    "motor>=3.6",
    "pymongo>=4.10",
    "PyJWT>=2.8",
    "requests>=2.31",
]

[project.optional-dependencies]
agent = [
    "flask",
    "flask-cors",
    "pydantic",
    "gunicorn",
]

[tool.setuptools]
packages = ["mongomcp", "mongomcp.agent"]

[tool.setuptools.package-dir]
mongomcp = "."
"mongomcp.agent" = "agent"
